docs: creating the basic documentation of users
